refactor(be): WebSocket 관련 메서드 및 api 연결 수정